--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress --colors",
+    "serve": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +14,13 @@
     "@types/qwest": "^1.7.28",
     "lodash": "^4.17.10",
     "qwest": "^4.5.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "underscore-template-loader": "^1.0.0",
+    "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.108",
+    "@types/node": "^10.1.2",
     "css-loader": "^0.28.11",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.3.0",
