--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "fromscratch",
   "version": "1.0.0",
+  "productName": "TODO-List",
   "description": "",
-  "main": "app.ts",
+  "main": "main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --colors",
-    "serve": "webpack-dev-server --open"
+    "serve": "webpack-dev-server --open",
+    "package": "electron-packager . --asar"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +25,8 @@
     "@types/lodash": "^4.14.108",
     "@types/node": "^10.1.2",
     "css-loader": "^0.28.11",
+    "electron": "^2.0.1",
+    "electron-packager": "^12.1.0",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.3.0",
     "webpack": "^4.8.3",
