--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "esnext",
     "sourceMap": true,
-    "target": "es5",
-    "allowJs": true
+    "target": "es6",
+    "allowJs": true,
+    "lib": ["es2015", "dom"]
   }
 }
